src/objects/Utility_by_Zip_Code__c.object
<CustomObject>
    <fields>
        <fullName>EIA_Utility_Id__c</fullName>
        <label>EIA Utility Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Region</label>
        <referenceTo>Pricing_Region__c</referenceTo>
        <relationshipLabel>Utility by Zip Code</relationshipLabel>
        <relationshipName>Utility_by_Zip_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company Master</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Utility by Zip Code</relationshipLabel>
        <relationshipName>Utility_by_Zip_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility by Zip Code</relationshipLabel>
        <relationshipName>Utility_by_Zip_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Zip_Code__c</fullName>
        <label>Utility Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Utility by Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Utility_Company__c</columns>
        <columns>Utility_Zip_Code__c</columns>
        <columns>EIA_Utility_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Aux</fullName>
        <columns>NAME</columns>
        <columns>Utility_Company__c</columns>
        <columns>Utility_Company_Master__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_Zip_Code__c</field>
            <operation>contains</operation>
            <value>77494</value>
        </filters>
        <label>Aux</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_Solar_IT</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Utility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility by Zip Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>